Remarks on report outline

--- a/verslag/report.bib
+++ b/verslag/report.bib
@@ -35,7 +35,7 @@
 @INPROCEEDINGS{DynCNET, 
 author={D. Weyns and N. Boucke and T. Holvoet and B. Demarsin}, 
 booktitle={First International Conference on Self-Adaptive and Self-Organizing Systems (SASO 2007)}, 
-title={DynCNET: A Protocol for Dynamic Task Assignment in Multiagent Systems}, 
+title={Dyn{CNET}: A Protocol for Dynamic Task Assignment in Multiagent Systems}, 
 year={2007}, 
 pages={281-284}, 
 keywords={multi-agent systems;protocols;DynCNET;complex coordination problem;contract net;dynamic task assignment;industrial automated transportation system;multiagent systems;protocol;Computer industry;Contracts;Control systems;Delay;Multiagent systems;Protocols;Switches;System testing;Transportation;Vehicle dynamics}, 
