Rewrite CNET theory section

--- a/verslag/report.bib
+++ b/verslag/report.bib
@@ -58,8 +58,8 @@ month={Dec},}%http://www2.cs.siu.edu/~hexmoor/classes/CS539-F10/Smith.pdf
 
 @INPROCEEDINGS{CNCP,
     author = {Tore Knabe and Michael Schillo and Klaus Fischer},
-    title = {Improvements to the FIPA Contract Net Protocol for Performance Increase and Cascading Applications},
-    booktitle = {In International Workshop for Multi-Agent Interoperability at the German Conference on AI (KI-2002},
+    title = {Improvements to the {FIPA} Contract Net Protocol for Performance Increase and Cascading Applications},
+    booktitle = {In International Workshop for Multi-Agent Interoperability at the German Conference on AI (KI-2002)},
     year = {2002}
 }%http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.19.9772&rep=rep1&type=pdf
 
