--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -80,23 +80,33 @@ We expect the profit to rise until the fines of not delivering start to become t
 \outline{Theoretische uiteenzetting van wat in de drie relevante papers staat}
 \commentV{Theory nog iets algemener, meer van onze eigen dingen in system design zetten? zie ook hoofdstuk 7 Schut}
 
-In this section we describe how the theory of multi-agent systems maps onto our implementation. We first discuss the theory of contract net, followed by the variations made in CNCP and DynCNET. We conclude with a description of the agent architectures.
+In this section we describe the theory of the Contract Net Protocol and the two extensions CNCP and DynCNET. We use the literature on these protocols to highlight their characteristics and differences.
+
+\proposalY{In this section we describe how the theory of multi-agent systems maps onto our implementation. We first discuss the theory of contract net, followed by the variations made in CNCP and DynCNET. We conclude with a description of the agent architectures.}
 
 \taskS{Add sequence diagrams of 3 protocols (mss met kleuren werken om verschillen aan te duiden?). Best met zelfde kleuren als grafieken dan: CNET rood, CNCP groen en DynCNET blauw}
 
-\subsection{Contract Net} Our system has two types of agents: clients (who represent a package that needs to be delivered) and a drone. The two types of agents each fulfill a different role in CNET: clients fulfill the role of manager, while the drones fulfill the role of contractor. When clients enter the world, they will announce a call for proposal to all agents\footnote{This includes other clients, which will ignore all calls for proposals. RinSim does not (yet) provide a broadcast to a subset, the drones, of all agents.} through the means of broadcasting. This task announcement is simplified from the original paper \cite{CNET}. As all drones are eligible, no eligibility information is provided. The bid specification is missing as well. There is no expiration time on the call for proposal, as drones should bid as quickly as they can.
+\subsection{Contract Net} The Contract Net Protocol was conceived by Smith in 1980. \cite{CNET} It is a high-level protocol for communication between agents to allow distributed task execution. The high-level protocol messages have a particular structure and meaning, which means the agents can interpret them to receive information on tasks and allocations and to send replies such as bids. 
 
-When drones receive task announcements, they will calculate, for every warehouse, the estimated profit\footnote{Taking the delivery window and the probability of a crash into account} they can make on this client. Only the warehouse with maximal profit for the client is kept. This is done for all task announcements. A drone is only allowed to bid on 1 of those announcements, therefore the most profitable client is selected\footnote{If it is economically better to not deliver any client, no bids are placed}. A propose message is sent to this client including the estimated profit the company can make on this client. Once a drone has placed a bid, he will enter the \texttt{PROPOSED\_BID} state in which he is no longer allowed to bid until either he is awarded the task and has executed it or the client refuses his bid.
+CNET tries to solve the problem of assigning tasks to idle agents in the most efficient way. Moreover, this problem needs to be solved in a distributed manner, without a central authority that tracks tasks and assigns them with global knowledge.
 
-When a client receives a bid, it will compare it to the other bids it got (if any) and will award the contract to the drone which will make the most profit for the company \footnote{The client agent thus acts as if it is the manager, responsible for the real client, trying to maximize the profit the company can make on this client}. It will send the drone a message to inform him of the contract. All other drones will be informed that their proposal has been declined. If later on, more proposals would arrive, the client will decline them as well. 
+CNET relies on the negotiation of contracts between a manager and a contractor for the execution of a task. The manager launches a tender for the execution of a task and will monitor the execution and process the results once they arrive. The contractor bids on the tenders and when it wins, executes the task and submits the results to the manager. Each agent can be one of these roles for each individual task. This can also mean that an agent acts as a contractor for one task and as a manager for sub-tasks of this task to distribute the workload over several agents.
 
-Because drones won't bid if it is not economically interesting, all bids are satisfactory for the client.
+The Contract Net Protocol is defined by the messages and the information that is contained within them. By having a common language for these messages, all agents can communicate with each other and new agents can immediately start listening for new messages and participate in the negotiation process. There are three types of messages: those related to task announcements, those related to bids and those for the reporting of task results.
 
-Once the drone has received the contract from the client, it will start executing it. After picking up the package at the warehouse, the drone will inform the client about this. When it has delivered the package, a message is sent as well. In case the drone would crash, it would sent one last signal to the client to inform him of the crash\footnote{In practice, outside a simulator, a polling approach might be used instead.}. The client would then start sending out calls for proposals again.
+A manager initiates the contract negotiation process by adversiting that task with a task announcement message. This message can either be broadcasted to all agents or sent only to one or a few nodes in a focused manner. The task announcement message contains four main parts: an eligibility specification, a task abstraction, a bid specification and an expiration time. The eligibility specification describes what criteria an agent must meet to be able to bid and eventually possibly receive the contract and execute the task. The task abstraction is a description of the task to be executed. The bid specification outlines the expected form of a bid. The expiration time marks the final time at which a bid may be submitted.
 
-As said earlier, once a bid has been placed, a drone cannot bid unless the current task has been executed or his bid was declined. While \cite{CNET} suggest that this might increase delay significantly, we assumed the effect would be smaller in our design where clients assign contracts from the moments they receive bids. As a drone can only hold 1 contract, there is no need for a local scheduler within the drone.
+Whenever a task announcement arrives at an agent that wants to act as a contractor, all of these parts of the announcement allow contractors to decide whether and when to submit a bid. They add the announcement to a list of received and not expired announcements if they're eligible. The announcements in the list are ranked on interest to the agent. This ranking is a task-specific operation and is based on the information contained within the task announcement.
 
-To reduce the message count significantly, drones send explicit refuse messages to clients (as answer to a call for proposal). In these messages, the reason for refusal is added. There are 3 possibilities: \texttt{BUSY}\footnote{The drone is executing another delivery}, \texttt{LOW\_RANKING}\footnote{The drone prefers the proposal of another client.} and \texttt{INELIGIBLE}\footnote{It is not economically profitable for the drone to deliver to this client}. Clients will act smart based on these refusal reasons. If a \texttt{LOW\_RANKING} is received, it can send a new call for proposal immediately as it is likely that a drone was refused the contract it preferred. If only \texttt{BUSY} or \texttt{INELIGIBLE} refusals are received, a new immediate call for proposal has little chance of succeeding. We know that the drones are busy delivering other packages or are too far away. Clients can thus wait until a drone becomes available again. \cite{CNET} suggests that drones could declare when they are available and what kind of tasks they can execute so the clients can propose them instead of the other way around. We decided to give extra information to the refusal message: If busy, the refusal message also contains a lower limit on when the drone will become available again. The client can now wait with sending out new calls for proposals until this lower limit has passed.
+A busy agent cannot bid while busy, but continues to process the task announcements while executing its task. When this task completes, it can then check the list of task announcements and pick a task to submit a bid on. An idle agent will decide to bid on a task either immediately when it arrives or when it expires. It either submits a bid to the most interesting task or waits for new (better) task aanouncements. In a bid, an agent describes its specification in the node abstraction slot. It can also indicate additional information that will be required if the agent may execute the task. Whenever an agent submits a bid to a task, it is bound to that task. This means that it cannot bid on other tasks and already allocates its resources to that task. Only when the task expires and no message is received that the contract has been awarded, can the agent release its resources and bid on other tasks. This is done to avoid multiple task awards to one agent, which would need to be queued and would slow down the system performance. It does mean idle agents are 'blocked' until their bid is rejected, but this is reduced by allowing bids and awards before the expiration time. \commentV{klopt dit? staat precies wel in de paper maar klinkt zo raar (vooral: agents die niet awarded worden moeten toch wel nog tot expiration wachten)}
+
+Bids arrive at the manager and are also ranked and stored in a list until the task can be awarded. The manager can either award a contract immediately if a satisfactory bid arrives (even before the expiration time) or wait for further bids. When the task expires, it can either award the contract to the best bidder in its list or advertise the task again. The task is therefore not necessarily awarded when it expires. If a manager awards a contract, it sends a message to the winning contractor, who can start executing the task. When it's finished, it sends a report to the manager with the results of the execution.
+
+The bidding process can be extended to allow agents that cannot or do not want to bid to respond immediately with their reason why they will not bid. Managers can then delay task announcements if no agent is ready to take up the task. An agent can respond immediately if they are ineligible, busy or give the task a low ranking. The manager can then avoid simply reissuing the task announcement when it expires, but can loosen the eligibility requirements if all agents are ineligible or wait before reissuing the task announcement if all agents are busy or not interested yet in the task.
+
+\commentV{FIPA?}
+
+
 
 \subsection{Contract Net with Confirmation} The earlier solution suffers from 1 major flaw: drones have to commit to their bid until the client accepts or declines their bid. They are not allowed to bid on other task announcements while they have a bid outstanding. As their are $n$ drones and $m$ clients, $n*m$ bids are possible in theory. In practice, only $n$ bids are sent out. In the worst case, where all drones rank the clients in the same order $O(m)$ rounds of bidding are necessary to assign all clients to drones in CNET.
 
@@ -160,6 +170,20 @@ In CNET and CNCP, a client can only send calls for proposals while in the \textt
         \item messaging gedetailleerd bespreken of niet?
         \item tijd tijdens opladen wordt niet meegerekend bij estimated cost (footnote)
     \end{itemize}}
+    
+\proposalY{Our system has two types of agents: clients (who represent a package that needs to be delivered) and a drone. The two types of agents each fulfill a different role in CNET: clients fulfill the role of manager, while the drones fulfill the role of contractor. When clients enter the world, they will announce a call for proposal to all agents \textbf{footnote}{This includes other clients, which will ignore all calls for proposals. RinSim does not (yet) provide a broadcast to a subset, the drones, of all agents.} through the means of broadcasting. This task announcement is simplified from the original paper \cite{CNET}. As all drones are eligible, no eligibility information is provided. The bid specification is missing as well. There is no expiration time on the call for proposal, as drones should bid as quickly as they can.
+    
+When drones receive task announcements, they will calculate, for every warehouse, the estimated profit \textbf{footnote}{Taking the delivery window and the probability of a crash into account} they can make on this client. Only the warehouse with maximal profit for the client is kept. This is done for all task announcements. A drone is only allowed to bid on 1 of those announcements, therefore the most profitable client is selected \textbf{footnote}{If it is economically better to not deliver any client, no bids are placed}. A propose message is sent to this client including the estimated profit the company can make on this client. Once a drone has placed a bid, he will enter the \texttt{PROPOSED\_BID} state in which he is no longer allowed to bid until either he is awarded the task and has executed it or the client refuses his bid.
+
+When a client receives a bid, it will compare it to the other bids it got (if any) and will award the contract to the drone which will make the most profit for the company  \textbf{footnote}{The client agent thus acts as if it is the manager, responsible for the real client, trying to maximize the profit the company can make on this client}. It will send the drone a message to inform him of the contract. All other drones will be informed that their proposal has been declined. If later on, more proposals would arrive, the client will decline them as well. 
+
+Because drones won't bid if it is not economically interesting, all bids are satisfactory for the client.
+
+Once the drone has received the contract from the client, it will start executing it. After picking up the package at the warehouse, the drone will inform the client about this. When it has delivered the package, a message is sent as well. In case the drone would crash, it would sent one last signal to the client to inform him of the crash \textbf{footnote}{In practice, outside a simulator, a polling approach might be used instead.}. The client would then start sending out calls for proposals again.
+
+As said earlier, once a bid has been placed, a drone cannot bid unless the current task has been executed or his bid was declined. While \cite{CNET} suggest that this might increase delay significantly, we assumed the effect would be smaller in our design where clients assign contracts from the moments they receive bids. As a drone can only hold 1 contract, there is no need for a local scheduler within the drone.
+
+To reduce the message count significantly, drones send explicit refuse messages to clients (as answer to a call for proposal). In these messages, the reason for refusal is added. There are 3 possibilities: \texttt{BUSY} \textbf{footnote}{The drone is executing another delivery}, \texttt{LOW\_RANKING} \textbf{footnote}{The drone prefers the proposal of another client.} and \texttt{INELIGIBLE} \textbf{footnote}{It is not economically profitable for the drone to deliver to this client}. Clients will act smart based on these refusal reasons. If a \texttt{LOW\_RANKING} is received, it can send a new call for proposal immediately as it is likely that a drone was refused the contract it preferred. If only \texttt{BUSY} or \texttt{INELIGIBLE} refusals are received, a new immediate call for proposal has little chance of succeeding. We know that the drones are busy delivering other packages or are too far away. Clients can thus wait until a drone becomes available again. \cite{CNET} suggests that drones could declare when they are available and what kind of tasks they can execute so the clients can propose them instead of the other way around. We decided to give extra information to the refusal message: If busy, the refusal message also contains a lower limit on when the drone will become available again. The client can now wait with sending out new calls for proposals until this lower limit has passed.}
 \subsection{Comparison with existing MAS from literature}
 \outline{
     \begin{itemize}
@@ -191,7 +215,7 @@ It is important to note, that in our design, bids are satisfactory if the expect
         \item independent: aantal drones, warehouses, clients
         \item dependent: profit, aantal clients delivered, aantal messages, delivery time, ... (\texttt{ExperimentResult})
         \item other: battery drain, kost pakketjes, oplaadkost, ... (\texttt{Variables.kt} + \texttt{PackageType.kt})
-        \item beschrijving computer
+        \item beschrijving computer + RinSim 4.1.0
     \end{itemize}}
 \subsection{Results}
 \commentY{Ook 95 \% Confidence interval (CI) op grafieken? Prof is daar precies fan van => Misschien beter om te doen. Ik ben niet 100\% zeker van correctheid, maar misschien wel, omdat het CI is van de variabele, niet het verschil tussen 2 variabelen. Dus zolang variabele normaal verdeeld is, is het waarschijnlijk wel ok.}
